--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,9 @@ if(UNIX)
 
         ADD_EXECUTABLE(echoclient-example.run examples/EchoClient.cpp)
         TARGET_LINK_LIBRARIES(echoclient-example.run clsocket)
+        
+        ADD_EXECUTABLE(clsocket-tester.run tests/main.cpp)
+        TARGET_LINK_LIBRARIES(clsocket-tester.run clsocket pthread)
     endif()
 elseif(WIN32)
     OPTION(CLSOCKET_EXAMPLES "Build the examples" ON)
