--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
             - g++-6
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        - GCC_VERSION=6
 
     # works on Precise and Trusty
     - os: linux
@@ -23,6 +24,7 @@ matrix:
             - g++-7
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+        - GCC_VERSION=7
 
 before_install:
     - eval "${MATRIX_EVAL}"
