--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,18 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
         - GCC_VERSION=7
+        
+    - os: osx
+      osx_image: xcode8
+      env:
+        - MATRIX_EVAL="brew install gcc6 && CC=gcc-6 && CXX=g++-6"
+        - GCC_VERSION=6
+
+    - os: osx
+      osx_image: xcode8
+      env:
+        - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
+        - GCC_VERSION=7
 
 before_install:
     - eval "${MATRIX_EVAL}"
