--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ matrix:
             - g++-6
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-        - GCC_VERSION=6
 
     # works on Precise and Trusty
     - os: linux
@@ -24,19 +23,15 @@ matrix:
             - g++-7
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-        - GCC_VERSION=7
         
     - os: osx
       osx_image: xcode8.3
       env:
         - MATRIX_EVAL="brew install gcc6 && CC=gcc-6 && CXX=g++-6"
-        - GCC_VERSION=6
-
     - os: osx
       osx_image: xcode8.3
       env:
         - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
-        - GCC_VERSION=7
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -47,5 +42,5 @@ before_install:
 script:
 - mkdir build-travis
 - cd build-travis
-- cmake .. -DCMAKE_C_COMPILER=gcc-$GCC_VERSION -DCMAKE_CXX_COMPILER=g++-$GCC_VERSION -DCLSOCKET_EXAMPLES:BOOL=ON
+- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCLSOCKET_EXAMPLES:BOOL=ON
 - make -j3
