--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ matrix:
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update ;
+      brew cask uninstall oclint;
       fi
     - eval "${MATRIX_EVAL}"
 
