--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,9 @@ before_install:
       fi
     - eval "${MATRIX_EVAL}"
 
+# require the branch name to be master
+if: branch = master
+
 script:
 - mkdir build-travis
 - cd build-travis
