adding http req example to cmake
using wildcard for source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,10 @@ elseif(WIN32)
         
         ADD_EXECUTABLE(clsocket-tester tests/main.cpp)
         TARGET_LINK_LIBRARIES(clsocket-tester clsocket)
+        
+        FILE(GLOB HTTPREQ "example/HttpRequest/*.*")
+        ADD_EXECUTABLE(clsocket-tester ${HTTPREQ})
+        TARGET_LINK_LIBRARIES(clsocket-tester clsocket)
     endif()
 endif()
 
