updated cmakelists.txt for new project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
-project(clsocket)
+cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
+project(simple-socket)
 
 # set up versioning.
 set(BUILD_MAJOR "2")
@@ -9,7 +9,7 @@ set(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_VERSION})
 
 include_directories(src)
 
-SET(CLSOCKET_HEADERS
+SET(SIMPLE_SOCKET_HEADERS
 src/ActiveSocket.h
 src/Host.h
 src/PassiveSocket.h
@@ -17,18 +17,18 @@ src/SimpleSocket.h
 src/StatTimer.h
 )
 
-SET(CLSOCKET_SOURCES
+SET(SIMPLE_SOCKET_SOURCES
 src/SimpleSocket.cpp
 src/ActiveSocket.cpp
 src/PassiveSocket.cpp
 )
 
 # mark headers as headers...
-SET_SOURCE_FILES_PROPERTIES( ${CLSOCKET_HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE )
+SET_SOURCE_FILES_PROPERTIES( ${SIMPLE_SOCKET_HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE )
 # append to sources so that dependency checks work on headers
-LIST(APPEND CLSOCKET_SOURCES ${CLSOCKET_HEADERS})
+LIST(APPEND SIMPLE_SOCKET_SOURCES ${SIMPLE_SOCKET_HEADERS})
 
-# OS and compiler checks. 
+# OS and compiler checks.
 if(UNIX)
     # linux / normal unix
     add_definitions(-D_LINUX)
@@ -55,87 +55,80 @@ elseif(WIN32)
     endif()
 endif()
 
-OPTION(CLSOCKET_SHARED "Build clsocket lib as shared." OFF)
-OPTION(CLSOCKET_DEP_ONLY "Build for use inside other CMake projects as dependency." OFF)
+OPTION(SIMPLE_SOCKET_SHARED "Build simple-socket lib as shared." OFF)
+OPTION(SIMPLE_SOCKET_DEP_ONLY "Build for use inside other CMake projects as dependency." OFF)
 
 # make the lib
-if(CLSOCKET_SHARED)
-    if(CLSOCKET_DEP_ONLY)
-        ADD_LIBRARY(clsocket SHARED EXCLUDE_FROM_ALL ${CLSOCKET_SOURCES})
+if(SIMPLE_SOCKET_SHARED)
+    if(SIMPLE_SOCKET_DEP_ONLY)
+        ADD_LIBRARY(simple-socket SHARED EXCLUDE_FROM_ALL ${SIMPLE_SOCKET_SOURCES})
     else()
-        ADD_LIBRARY(clsocket SHARED ${CLSOCKET_SOURCES})
+        ADD_LIBRARY(simple-socket SHARED ${SIMPLE_SOCKET_SOURCES})
     endif()
 else()
-    if(CLSOCKET_DEP_ONLY)
-        ADD_LIBRARY(clsocket STATIC EXCLUDE_FROM_ALL ${CLSOCKET_SOURCES})
+    if(SIMPLE_SOCKET_DEP_ONLY)
+        ADD_LIBRARY(simple-socket STATIC EXCLUDE_FROM_ALL ${SIMPLE_SOCKET_SOURCES})
     else()
-        ADD_LIBRARY(clsocket STATIC ${CLSOCKET_SOURCES})
+        ADD_LIBRARY(simple-socket STATIC ${SIMPLE_SOCKET_SOURCES})
     endif()
 endif()
-TARGET_LINK_LIBRARIES(clsocket ${PROJECT_LIBS})
+TARGET_LINK_LIBRARIES(simple-socket ${PROJECT_LIBS})
 
 # install into configured prefix
-if(NOT CLSOCKET_DEP_ONLY)
-    install(TARGETS clsocket ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
-    install(FILES ${CLSOCKET_HEADERS} DESTINATION include)
+if(NOT SIMPLE_SOCKET_DEP_ONLY)
+    install(TARGETS simple-socket ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
+    install(FILES ${SIMPLE_SOCKET_HEADERS} DESTINATION include)
 endif()
 
-set_target_properties(clsocket PROPERTIES VERSION ${BUILD_VERSION}
-                                          SOVERSION ${BUILD_MAJOR})
+set_target_properties(simple-socket PROPERTIES VERSION ${BUILD_VERSION} SOVERSION ${BUILD_MAJOR})
 
-if(UNIX)
-    OPTION(CLSOCKET_EXAMPLES "Build the examples" ON)
-
-    if(CLSOCKET_EXAMPLES)
-        ADD_EXECUTABLE(clsocket-example.run examples/RecvAsync.cpp)
-        TARGET_LINK_LIBRARIES(clsocket-example.run clsocket pthread)
-        if(NOT CLSOCKET_DEP_ONLY)
-            install(TARGETS clsocket-example.run DESTINATION bin)
-        endif()
+OPTION(SIMPLE_SOCKET_EXAMPLES "Build the examples" ON)
+if(SIMPLE_SOCKET_EXAMPLES)
+   if(UNIX)
+        ADD_EXECUTABLE(asyncclient-example.run examples/RecvAsync.cpp)
+        TARGET_LINK_LIBRARIES(asyncclient-example.run simple-socket pthread)
 
         ADD_EXECUTABLE(querydaytime-example.run examples/QueryDayTime.cpp)
-        TARGET_LINK_LIBRARIES(querydaytime-example.run clsocket)
+        TARGET_LINK_LIBRARIES(querydaytime-example.run simple-socket)
 
         ADD_EXECUTABLE(echoserver-example.run examples/EchoServer.cpp)
-        TARGET_LINK_LIBRARIES(echoserver-example.run clsocket)
+        TARGET_LINK_LIBRARIES(echoserver-example.run simple-socket)
 
         ADD_EXECUTABLE(echoclient-example.run examples/EchoClient.cpp)
-        TARGET_LINK_LIBRARIES(echoclient-example.run clsocket)
+        TARGET_LINK_LIBRARIES(echoclient-example.run simple-socket)
 
         FILE(GLOB DNS "examples/Dns/*")
         ADD_EXECUTABLE(dnsclient-example.run ${DNS})
-        TARGET_LINK_LIBRARIES(dnsclient-example.run clsocket)
+        TARGET_LINK_LIBRARIES(dnsclient-example.run simple-socket)
 
         FILE(GLOB HTTPREQ "examples/HttpRequest/*")
         ADD_EXECUTABLE(httpclient-example.run ${HTTPREQ})
-        TARGET_LINK_LIBRARIES(httpclient-example.run clsocket)
+        TARGET_LINK_LIBRARIES(httpclient-example.run simple-socket)
 
-        ADD_EXECUTABLE(clsocket-tester.run tests/main.cpp)
-        TARGET_LINK_LIBRARIES(clsocket-tester.run clsocket pthread)
-    endif()
-elseif(WIN32)
-    OPTION(CLSOCKET_EXAMPLES "Build the examples" ON)
+        ADD_EXECUTABLE(simple-socket-tester.run tests/main.cpp)
+        TARGET_LINK_LIBRARIES(simple-socket-tester.run simple-socket pthread)
+    elseif(WIN32)
+        ADD_EXECUTABLE(asyncclient-example.run examples/RecvAsync.cpp)
+        TARGET_LINK_LIBRARIES(asyncclient-example.run simple-socket)
 
-    if(CLSOCKET_EXAMPLES)
         ADD_EXECUTABLE(querydaytime-example examples/QueryDayTime.cpp)
-        TARGET_LINK_LIBRARIES(querydaytime-example clsocket)
+        TARGET_LINK_LIBRARIES(querydaytime-example simple-socket)
 
         ADD_EXECUTABLE(echoserver-example examples/EchoServer.cpp)
-        TARGET_LINK_LIBRARIES(echoserver-example clsocket)
+        TARGET_LINK_LIBRARIES(echoserver-example simple-socket)
 
         ADD_EXECUTABLE(echoclient-example examples/EchoClient.cpp)
-        TARGET_LINK_LIBRARIES(echoclient-example clsocket)
-
-        ADD_EXECUTABLE(clsocket-tester tests/main.cpp)
-        TARGET_LINK_LIBRARIES(clsocket-tester clsocket)
+        TARGET_LINK_LIBRARIES(echoclient-example simple-socket)
 
         FILE(GLOB DNS "examples/Dns/*")
         ADD_EXECUTABLE(dnsclient-example ${DNS})
-        TARGET_LINK_LIBRARIES(dnsclient-example clsocket)
+        TARGET_LINK_LIBRARIES(dnsclient-example simple-socket)
 
         FILE(GLOB HTTPREQ "examples/HttpRequest/*")
         ADD_EXECUTABLE(httpclient-example ${HTTPREQ})
-        TARGET_LINK_LIBRARIES(httpclient-example clsocket)
+        TARGET_LINK_LIBRARIES(httpclient-example simple-socket)
+
+        ADD_EXECUTABLE(simple-socket-tester tests/main.cpp)
+        TARGET_LINK_LIBRARIES(simple-socket-tester simple-socket)
     endif()
 endif()
-
