correcting bad project name in CMakeList.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,8 +117,8 @@ if(SIMPLE_SOCKET_EXAMPLES)
         ADD_EXECUTABLE(simple-socket-tester.run tests/main.cpp)
         TARGET_LINK_LIBRARIES(simple-socket-tester.run simple-socket pthread)
     elseif(WIN32)
-        ADD_EXECUTABLE(asyncclient-example.run examples/RecvAsync.cpp)
-        TARGET_LINK_LIBRARIES(asyncclient-example.run simple-socket)
+        ADD_EXECUTABLE(asyncclient-example examples/RecvAsync.cpp)
+        TARGET_LINK_LIBRARIES(asyncclient-example simple-socket)
 
         ADD_EXECUTABLE(querydaytime-example examples/QueryDayTime.cpp)
         TARGET_LINK_LIBRARIES(querydaytime-example simple-socket)
