--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(BUILD_MINOR "0")
 set(BUILD_VERSION "0")
 set(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_VERSION})
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 include_directories(src)
 
 SET(SIMPLE_SOCKET_HEADERS
