--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,21 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
+    - os: linux
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-6.0
+          - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main'
+            key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+          packages:
+          - clang-6.0
+          - libstdc++6
+          - libpng-dev
+      env:
+      - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+
     - os: osx
       osx_image: xcode8.3
       env:
