separating main function from http code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,58 +91,60 @@ endif()
 set_target_properties(simple-socket PROPERTIES VERSION ${BUILD_VERSION} SOVERSION ${BUILD_MAJOR})
 
 OPTION(SIMPLE_SOCKET_EXAMPLES "Build the examples" ON)
-if(SIMPLE_SOCKET_EXAMPLES)
-   if(UNIX)
-        ADD_EXECUTABLE(asyncclient-example.run examples/RecvAsync.cpp)
-        TARGET_LINK_LIBRARIES(asyncclient-example.run simple-socket pthread)
+if(NOT SIMPLE_SOCKET_DEP_ONLY)
+    if(SIMPLE_SOCKET_EXAMPLES)
+       if(UNIX)
+            ADD_EXECUTABLE(asyncclient-example.run examples/RecvAsync.cpp)
+            TARGET_LINK_LIBRARIES(asyncclient-example.run simple-socket pthread)
 
-        ADD_EXECUTABLE(querydaytime-example.run examples/QueryDayTime.cpp)
-        TARGET_LINK_LIBRARIES(querydaytime-example.run simple-socket)
+            ADD_EXECUTABLE(querydaytime-example.run examples/QueryDayTime.cpp)
+            TARGET_LINK_LIBRARIES(querydaytime-example.run simple-socket)
 
-        ADD_EXECUTABLE(echoserver-example.run examples/EchoServer.cpp)
-        TARGET_LINK_LIBRARIES(echoserver-example.run simple-socket pthread)
+            ADD_EXECUTABLE(echoserver-example.run examples/EchoServer.cpp)
+            TARGET_LINK_LIBRARIES(echoserver-example.run simple-socket pthread)
 
-        ADD_EXECUTABLE(echoclient-example.run examples/EchoClient.cpp)
-        TARGET_LINK_LIBRARIES(echoclient-example.run simple-socket)
+            ADD_EXECUTABLE(echoclient-example.run examples/EchoClient.cpp)
+            TARGET_LINK_LIBRARIES(echoclient-example.run simple-socket)
 
-        ADD_EXECUTABLE(multicast-example.run examples/Multicast.cpp)
-        TARGET_LINK_LIBRARIES(multicast-example.run simple-socket pthread)
+            ADD_EXECUTABLE(multicast-example.run examples/Multicast.cpp)
+            TARGET_LINK_LIBRARIES(multicast-example.run simple-socket pthread)
 
-        FILE(GLOB DNS "examples/dns/*")
-        ADD_EXECUTABLE(dnsclient-example.run ${DNS})
-        TARGET_LINK_LIBRARIES(dnsclient-example.run simple-socket)
+            FILE(GLOB DNS "examples/dns/*")
+            ADD_EXECUTABLE(dnsclient-example.run ${DNS})
+            TARGET_LINK_LIBRARIES(dnsclient-example.run simple-socket)
 
-        FILE(GLOB HTTP "examples/http/*")
-        ADD_EXECUTABLE(httpclient-example.run ${HTTP})
-        TARGET_LINK_LIBRARIES(httpclient-example.run simple-socket)
+            FILE(GLOB HTTP "examples/http/*")
+            ADD_EXECUTABLE(httpclient-example.run examples/HttpClient.cpp ${HTTP})
+            TARGET_LINK_LIBRARIES(httpclient-example.run simple-socket)
 
-        ADD_EXECUTABLE(simple-socket-tester.run tests/main.cpp)
-        TARGET_LINK_LIBRARIES(simple-socket-tester.run simple-socket pthread)
-    elseif(WIN32)
-        ADD_EXECUTABLE(asyncclient-example examples/RecvAsync.cpp)
-        TARGET_LINK_LIBRARIES(asyncclient-example simple-socket)
+            ADD_EXECUTABLE(simple-socket-tester.run tests/main.cpp)
+            TARGET_LINK_LIBRARIES(simple-socket-tester.run simple-socket pthread)
+        elseif(WIN32)
+            ADD_EXECUTABLE(asyncclient-example examples/RecvAsync.cpp)
+            TARGET_LINK_LIBRARIES(asyncclient-example simple-socket)
 
-        ADD_EXECUTABLE(querydaytime-example examples/QueryDayTime.cpp)
-        TARGET_LINK_LIBRARIES(querydaytime-example simple-socket)
+            ADD_EXECUTABLE(querydaytime-example examples/QueryDayTime.cpp)
+            TARGET_LINK_LIBRARIES(querydaytime-example simple-socket)
 
-        ADD_EXECUTABLE(echoserver-example examples/EchoServer.cpp)
-        TARGET_LINK_LIBRARIES(echoserver-example simple-socket)
+            ADD_EXECUTABLE(echoserver-example examples/EchoServer.cpp)
+            TARGET_LINK_LIBRARIES(echoserver-example simple-socket)
 
-        ADD_EXECUTABLE(echoclient-example examples/EchoClient.cpp)
-        TARGET_LINK_LIBRARIES(echoclient-example simple-socket)
+            ADD_EXECUTABLE(echoclient-example examples/EchoClient.cpp)
+            TARGET_LINK_LIBRARIES(echoclient-example simple-socket)
 
-        ADD_EXECUTABLE(multicast-example examples/Multicast.cpp)
-        TARGET_LINK_LIBRARIES(multicast-example simple-socket)
+            ADD_EXECUTABLE(multicast-example examples/Multicast.cpp)
+            TARGET_LINK_LIBRARIES(multicast-example simple-socket)
 
-        FILE(GLOB DNS "examples/dns/*")
-        ADD_EXECUTABLE(dnsclient-example ${DNS})
-        TARGET_LINK_LIBRARIES(dnsclient-example simple-socket)
+            FILE(GLOB DNS "examples/dns/*")
+            ADD_EXECUTABLE(dnsclient-example ${DNS})
+            TARGET_LINK_LIBRARIES(dnsclient-example simple-socket)
 
-        FILE(GLOB HTTP "examples/http/*")
-        ADD_EXECUTABLE(httpclient-example ${HTTP})
-        TARGET_LINK_LIBRARIES(httpclient-example simple-socket)
+            FILE(GLOB HTTP "examples/http/*")
+            ADD_EXECUTABLE(httpclient-example examples/HttpClient.cpp ${HTTP})
+            TARGET_LINK_LIBRARIES(httpclient-example simple-socket)
 
-        ADD_EXECUTABLE(simple-socket-tester tests/main.cpp)
-        TARGET_LINK_LIBRARIES(simple-socket-tester simple-socket)
+            ADD_EXECUTABLE(simple-socket-tester tests/main.cpp)
+            TARGET_LINK_LIBRARIES(simple-socket-tester simple-socket)
+        endif()
     endif()
 endif()
