--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,9 @@ if: branch = master
 script:
 - mkdir build-travis
 - cd build-travis
-- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCLSOCKET_EXAMPLES:BOOL=ON
+- echo "Building Release"
+- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
+- make -j3
+- echo "Building Debug"
+- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug
 - make -j3
