updating debug and release selection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,14 @@ if(UNIX)
     # linux / normal unix
     add_definitions(-D_LINUX)
     set(CMAKE_CXX_STANDARD 17)
-    if(NOT CMAKE_BUILD_TYPE) 
-       set(CMAKE_BUILD_TYPE Release)
-    endif()
+    IF(CMAKE_BUILD_TYPE MATCHES Debug)
+      message("Building 'Debug' configuration.")
+    ELSEIF(CMAKE_BUILD_TYPE MATCHES Release)
+      message("Building 'Release' configuration.")
+    ELSE()
+      set(CMAKE_BUILD_TYPE Release)
+      message("Defaulting to 'Release' configuration.")
+    ENDIF()
     if(CYGWIN)
         # Special Cygwin stuff here
     elseif(APPLE)
