--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,19 @@ sudo: false
 language: cpp
 matrix:
   include:
-    # works on Precise and Trusty
     - os: linux
-      sudo: true
       addons:
         apt:
           sources:
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-7
-          - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
+          - llvm-toolchain-trusty-5.0
+          - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main'
             key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages:
-          - clang-7
-          - g++-7
+          - clang-5.0
+          - libstdc++5
       env:
-      - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+      - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
       
     - os: linux
       addons:
@@ -30,10 +28,34 @@ matrix:
           packages:
           - clang-6.0
           - libstdc++6
-          - libpng-dev
       env:
       - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+      
+    - os: linux
+      sudo: true
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-7
+          - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-7 main'
+            key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+          packages:
+          - clang-7
+          - libstdc++-7-dev
+      env:
+      - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
 
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        
     - os: linux
       addons:
         apt:
@@ -70,10 +92,6 @@ matrix:
         - MATRIX_EVAL=""
         
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew update ;
-      brew cask uninstall oclint;
-      fi
     - eval "${MATRIX_EVAL}"
 
 # require the branch name to be master
